--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@
 models/L1_300_epochs/net.pth filter=lfs diff=lfs merge=lfs -text
 models/L1_lower_learning_rate/net.pth filter=lfs diff=lfs merge=lfs -text
 data/DeblurringData filter=lfs diff=lfs merge=lfs -text
+models filter=lfs diff=lfs merge=lfs -text
+models/pytorch filter=lfs diff=lfs merge=lfs -text
